Update LoginController.java
changing from deprecated URL to URI  and function is now handling responses from server.